--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI=mongodb+srv://msmodi1701:7hc52oWGqE63Pry7@cluster0.hmpalwu.mongodb.net/
-JWT_SECRET=supersecretkey123
+CLERK_SECRET_KEY=sk_test_WWbFBctgoXj1SJIYUC1p24K9bskxXogAsRo7vLCexn
+CLERK_JWT_AUDIENCE="http://localhost:5000"
