--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.35.3",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
+    "lucide-react": "^0.525.0",
+    "next-theme": "^0.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
