added frontend live-chart feature

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,12 @@
 PORT=5000
 MONGO_URI=mongodb+srv://msmodi1701:7hc52oWGqE63Pry7@cluster0.hmpalwu.mongodb.net/
+
+# clerk configuration
 CLERK_SECRET_KEY=sk_test_U0BPwrlx6SAPPHBwPS9jYzj4ZLc6TJOvjHruFEsh8R
 CLERK_JWT_AUDIENCE=backend
-
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YmV0dGVyLXNhd2Zpc2gtMTguY2xlcmsuYWNjb3VudHMuZGV2JA
+
+# Cloudinary configuration
+CLOUD_NAME = "dscl5nnzv"
+CLOUDINARY_API_KEY = "895516316927811"
+CLOUDINARY_API_SECRET = "O2C6Vx3s0urHcMtKnrx6yIP5Dug"
