--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,8 @@
     "@clerk/backend": "^2.5.0",
     "@clerk/clerk-react": "^5.35.3",
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "axios": "^1.11.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
