--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
+    "rechart": "^0.0.1",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
