--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
+    "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.525.0",
     "next-theme": "^0.1.5",
+    "plotly.js": "^3.0.3",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.7.0",
     "rechart": "^0.0.1",
     "recharts": "^3.1.0",
