--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.35.3",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
     "lightweight-charts": "^4.1.1",
@@ -20,6 +20,7 @@
     "papaparse": "^5.5.3",
     "plotly.js": "^3.0.3",
     "radix-ui": "^1.4.2",
+    "rc-progress": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-plotly.js": "^2.6.0",
