--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,12 +1,6 @@
 {
-    "projects": [
-      {
-        "src": "Frontend/",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ]
+}
