--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
+    "framer-motion": "^12.23.12",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.525.0",
     "next-theme": "^0.1.5",
